--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Thilak, and this is my first webapp.
+            <h4>This text tells me that these are the changes I made on the PC ;)</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
