--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,23 @@
 <html>
+    <head>
+        <title>
+               Article One | Thilak Chander
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <div>
+            <p>
+                This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.
+            </p>
+            <p>
+                This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.
+            </p>
+            <p>
+                This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.
+            </p>
+        </div>
+    </body>
 </html>
