[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,6 +9,9 @@
             <a href="/">Home</a>
         </div>
         <div>
+            <p>16 August 2017</p>
+        </div>
+        <div>
             <p>
                 This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.
             </p>
