--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -9,6 +9,9 @@
             <a href="/">Home</a>
         </div>
         <div>
+            <h3>Article One</h3>
+        </div>
+        <div>
             <p>16 August 2017</p>
         </div>
         <div>
