--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,29 @@
-
+<html>
+    <head>
+        <title>
+               Article Two | Thilak Chander
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <div>
+            <h3>Article Two</h3>
+        </div>
+        <div>
+            <p>16 August 2017</p>
+        </div>
+        <div>
+            <p>
+                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
+            </p>
+            <p>
+                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
+            </p>
+            <p>
+                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
+            </p>
+        </div>
+    </body>
+</html>
