--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-               Article Two | Thilak Chander
+               Article Three | Thilak Chander
         </title>
     </head>
     <body>
@@ -9,7 +9,7 @@
             <a href="/">Home</a>
         </div>
         <div>
-            <h3>Article Two</h3>
+            <h3>Article Three</h3>
         </div>
         <div>
             <p>16 August 2017</p>
