[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,11 +3,21 @@
         <title>
                Article One | Thilak Chander
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <style>
+            .mass{
+                max-width:800px;
+                margin:0 auto;
+                color:red;
+                font-family:calibri;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="mass">
+         <div>
             <a href="/">Home</a>
-        </div>
+         </div>
         <div>
             <h3>Article One</h3>
         </div>
@@ -25,5 +35,6 @@
                 This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.This is my content served by Article One.
             </p>
         </div>
+       </div>    
     </body>
 </html>
