--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -3,8 +3,11 @@
         <title>
                Article Two | Thilak Chander
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="mass">
         <div>
             <a href="/">Home</a>
         </div>
@@ -24,6 +27,7 @@
             <p>
                 This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
             </p>
+        </div>
         </div>
     </body>
 </html>
