--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -18,15 +18,7 @@
             <p>16 August 2017</p>
         </div>
         <div>
-            <p>
-                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
-            </p>
-            <p>
-                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
-            </p>
-            <p>
-                This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.This is my content served by Article Two.
-            </p>
+             This is my content served by Article Two.
         </div>
         </div>
     </body>
