--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am Thilak, and this is my first webapp.
             <h4>This text tells me that these are the changes I made on the PC ;)</h4>
         </div>
+        <script>
+            alert('Hi, Im JavaScript!')
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
