[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
             <h4>This text tells me that these are the changes I made on the PC ;)</h4>
         </div>
         <script>
-            alert('Hi, Im JavaScript!')
+            alert('Hi, Im JavaScript!');
         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
