--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             Hi! I am Thilak, and this is my first webapp.
             <h4>This text tells me that these are the changes I made on the PC ;)</h4>
         </div>
