--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div id='img' class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://pbs.twimg.com/profile_images/895648487877902336/9CHyihvy_400x400.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I am Thilak, and this is my first webapp.
-            <h4>This text tells me that these are the changes I made on the PC ;)</h4>
+        <h3>Personal</h3>
+        <div>
+            Hi! My name is Thilak Chander.
         </div>
-        <script>
-            alert('Hi, Im JavaScript!');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div>
+            I am still a Student. :)
+        </div>
+        <div class="footer">
+            
+        </div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
